refactor: replace POJO boilerplate with Lombok and records